[CRNT-41166] : Using sda-title for tooltips and alignment issue with abort menu action item in data table. Bug :CRNT-41166

--- a/html5-common/src/main/resources/META-INF/webapp/styles/sd-data-table.css
+++ b/html5-common/src/main/resources/META-INF/webapp/styles/sd-data-table.css
@@ -103,6 +103,11 @@
 	padding: 0px;
 }
 
+.tbl-action-joined-link {
+	margin-left: -6px;
+	padding: 0px;
+}
+
 
 .tbl-row {
    border-bottom: solid 1px #ddd;
